<resources>
    <string name="app_name">Live Darshan</string>
    <string name="tuljapurlive">Shri Tuljabhavani, Tuljapur</string>
    <string name="kashilive">Shri Kashi Vishwanath, Varanasi</string>
    <string name="pandalpurlive">Shri Vitthal Rukmini, Pandharpur</string>
    <string name="author"><![CDATA[Designed & Developed by Anil Eknath Dhotre]]></string>
    <string name="disclaimer">Disclamer: Live streaming content is provided by Temple Administration. This application is designed for easy, uninterrupted and ad-free provision for live streaming.</string>
    <string name="live_streaming_warning">Please start live streaming and wait for at least 10 seconds for live streaming to start.</string>
    <string name="question">Frequently Asked Questions</string>
    <string name="email">Email Feedback/Questions</string>
    <string name="share"><![CDATA[Share App with Family & Friends]]></string>
    <string name="no_internet">Check Internet Connection!</string>

    <string name="question_1">Question: Why does live streaming does not start after pressing play button?</string>
    <string name="answer_1">Answer: Sometimes temple live streaming service temporarily goes down, please try to stream later.</string>

    <string name="question_2">Question: Why does it take too long time to load the live media streaming?</string>
    <string name="answer_2">Answer: This could be because of one or multiple factors, most common been; temple live streaming service handling high network requests or slow internet connectivity.</string>

    <string name="question_3">Question: Why isn't an option to live stream from Sai Baba Temple, Shirdi or Siddhivinayak Temple, Mumbai temples?</string>
    <string name="answer_3">Answer: Live stream from Sai Baba Temple, Shirdi and Siddhivinayak Temple, Mumbai seems to be restricted.</string>

    <string name="dev_email_address">akdhotre.apps@gmail.com</string>

    <string name="app_url">https://play.google.com/store/apps/details?id=com.lotustech.apps.android.livedarshan</string>
    <string name="tuljapurlive_url"><![CDATA[http://cam.live-s.cdn.bitgravity.com:1935/content:cdn-live/cam/live/secure/feed008?e=0&h=9e65498ec6c77c462ed63a051d55a801]]></string>
    <string name="kashilive_url"><![CDATA[http://cam.live-s.cdn.bitgravity.com:1935/content:cdn-live/cam/live/secure/Kashi_Vishwanath?e=0&h=1d434391393bd1b37e858a2571fbbf3d]]></string>
    <string name="pandalpurlive_url"><![CDATA[http://cam.live-s.cdn.bitgravity.com:1935/content:cdn-live/cam/live/secure/feed002?e=0&h=c3ccf04373172e4d9e7b9392327d9b88]]></string>

</resources>
