<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_faq"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lotustech.apps.android.livedarshan.FaqFragment"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#da9706">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:textStyle="normal|bold"
            android:textSize="22sp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:background="#da9706"
            android:fontFamily="sans-serif" />

    </LinearLayout>

    <TextView
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textColor="@android:color/white"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"
        android:textColor="@android:color/black"
        android:paddingBottom="10dp"/>

    <TextView
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textColor="@android:color/white"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"
        android:textColor="@android:color/black"
        android:paddingBottom="10dp"/>


    <TextView
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:textColor="@android:color/white"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_3"
        android:textColor="@android:color/black"
        android:paddingBottom="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/author"
        android:background="#da9706"
        android:layout_gravity="end"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:gravity="center_horizontal|center"/>


</LinearLayout>
